--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="from_gallery">FROM GALLERY</string>
-    <string name="from_camera">FROM CAMERA</string>
-    <string name="store_image">Store Image</string>
+    <string name="store_image">STORE IMAGE</string>
     <string name="image_view_description_load_dialog">placeholder image or the currently loaded image</string>
+    <string name="load_image">LOAD IMAGE</string>
 </resources>
